# deep-research

./: .env.example  .gitignore  .graphifyignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/: ARCHITECTURE.md  CLIENTS.md  PUBLISHING.md  related-projects.md
examples/: claude-desktop.mcp.json  codex.config.toml
src/deep_research_mcp/: __init__.py  __main__.py  cli.py  config.py  models.py  server.py
src/deep_research_mcp/services/: academic.py  deep_read.py  libgen.py  open_access.py  reporting.py  scihub.py  zotero.py
src/paper_pilot/: __init__.py  __main__.py  cli.py  config.py  models.py  server.py
src/paper_pilot/services/: academic.py  deep_read.py  libgen.py  open_access.py  reporting.py  scihub.py  zotero.py
src/zotero_researcher_mcp/: __init__.py  __main__.py  cli.py  config.py  server.py
src/zotero_researcher_mcp/services/: academic.py  deep_read.py  libgen.py  open_access.py  reporting.py  zotero.py
tests/: test_academic.py  test_deep_read.py  test_healthcheck.py  test_libgen.py  test_models.py  test_reporting.py  test_zotero.py
