[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-researcher-mcp"
version = "0.1.0"
description = "MCP server for academic discovery, PDF inspection, deep reading, and Zotero syncing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "aytzey" }
]
keywords = [
  "mcp",
  "zotero",
  "research",
  "academic-search",
  "open-access",
  "pdf",
  "llm-tools",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing :: Indexing",
]
dependencies = [
  "beautifulsoup4>=4.14.3",
  "httpx>=0.28.1",
  "lxml>=6.0.2",
  "mcp>=1.12.4",
  "PyMuPDF>=1.24.0",
  "python-dotenv>=1.2.2",
  "pyzotero>=1.6.11",
  "requests>=2.33.1",
]

[project.urls]
Homepage = "https://github.com/aytzey/Zotero-Researcher"
Repository = "https://github.com/aytzey/Zotero-Researcher"
Issues = "https://github.com/aytzey/Zotero-Researcher/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
zotero-researcher-mcp = "zotero_researcher_mcp.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_researcher_mcp"]
