[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-research-mcp"
version = "0.3.0"
description = "Open-source Deep Research. Search papers, read PDFs, extract evidence, render figures, sync to Zotero. MCP server for Claude, Codex, and any AI agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "aytzey" }
]
keywords = [
  "mcp",
  "deep-research",
  "research-agent",
  "academic-search",
  "open-access",
  "pdf",
  "llm-tools",
  "zotero",
  "semantic-scholar",
  "openalex",
  "arxiv",
  "literature-review",
  "sci-hub",
  "paper-download",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing :: Indexing",
]
dependencies = [
  "beautifulsoup4>=4.14.3",
  "httpx>=0.28.1",
  "lxml>=6.0.2",
  "mcp>=1.12.4",
  "PyMuPDF>=1.24.0",
  "python-dotenv>=1.2.2",
  "pyzotero>=1.6.11",
  "requests>=2.33.1",
]

[project.urls]
Homepage = "https://github.com/aytzey/academic-research-mcp"
Repository = "https://github.com/aytzey/academic-research-mcp"
Issues = "https://github.com/aytzey/academic-research-mcp/issues"
Documentation = "https://github.com/aytzey/academic-research-mcp#readme"
Changelog = "https://github.com/aytzey/academic-research-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
deep-research-mcp = "deep_research_mcp.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_research_mcp"]
